Show theme recommendations if exist and fix nav logo overlap with dropdown on scroll

--- a/source/_sass/_nav.scss
+++ b/source/_sass/_nav.scss
@@ -31,7 +31,7 @@ main {
 
   .nav-logo {
     margin-bottom: 1rem;
-    padding-top: 2.5rem;
+    padding-top: 2.8rem;
     padding-left: 3rem;
     width: 7rem;
   }
